...
          ) : (
            <Trans>Follow</Trans>
          )
        ) : isFollowedBy ? (
          <Trans>Mutuals</Trans>
        ) : (
          <Trans>Following</Trans>
        )}
      </ButtonText>
    </Button>
  )
}

