appId: app.witchsky
---
- runScript:
    file: ../setupServer.js
    env:
      SERVER_PATH: "?users"
- runFlow:
    file: ../setupApp.yml
- tapOn:
    id: "e2eSignInAlice"

# Navigate to another user profile via autocomplete
- extendedWaitUntil:
    visible:
      id: "bottomBarSearchBtn"
- tapOn:
    id: "bottomBarSearchBtn"
- assertVisible: "Search for posts, users[,]? or feeds"
- tapOn: "Search for posts, users[,]? or feeds"
- inputText: "b"
- tapOn:
    id: "searchAutoCompleteResult-bob.test"
- assertVisible:
    id: "profileView"
