appId: app.witchsky
---
- runScript:
    file: ../setupServer.js
    env:
      SERVER_PATH: ?users
- runFlow:
    file: ../setupApp.yml
- tapOn:
    id: "e2eSignInAlice"
- extendedWaitUntil:
    visible:
      id: "viewHeaderHomeFeedPrefsBtn"

# Post an image with the porn label
- assertVisible:
    id: "composeFAB"
- tapOn:
    id: "composeFAB"
- inputText: "Post with an image"
- tapOn:
    id: "openMediaBtn"
- extendedWaitUntil:
    visible:
      id: "selectedPhotosView"
- tapOn: "Content warnings"
- tapOn: "Porn"
- tapOn:
    label: "Tap on confirm"
    id: "confirmBtn"
- tapOn:
    id: "composerPublishBtn"
- tapOn:
    id: "e2eRefreshHome"
- assertVisible: "Adult Content"
